--- a/index.html
+++ b/index.html
@@ -1,24 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/3ebf8a3497.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/3ebf8a3497.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Neflix- Watch TV Show Online, Watch Movies Online</title>
-    
-</head>
-<body>
-   <header class="showcase">
-       <div class="showcase-top">
-           <img src="https://i.ibb.co/r5krrdz/logo.png" alt="Neflix">
-           <a href="#" class="btn btn-rounded"></a>
-       </div>
-       <div class="showcase-content"></div>
-       <h1>영화와 시리즈를 무제한으로.</h1>
-       <h2>다양한 디바이스에서 신청하세요 언제든 해지할 수<br> 있습니다</h2>
-       <h3>시청할 준비가 되셨나요?멤버십을 등록하거나 재시작하려면 이메일주소를 입력해주세요.</h3>
-   </header>
-</body>
+  </head>
+  <body>
+    <header class="showcase">
+      <div class="showcase-top">
+        <img src="https://i.ibb.co/r5krrdz/logo.png" alt="Neflix" />
+        <a href="#" class="btn btn-rounded">Sign In</a>
+      </div>
+      <div class="showcase-content">
+        <h1>영화와 시리즈를 무제한으로</h1>
+        <h2>
+          다양한 디바이스에서 신청하세요 언제든 해지할 수<br />
+          있습니다.
+        </h2>
+        <h3>
+          시청할 준비가 되셨나요? 멤버십을 등록하거나 재시작하려면 이메일주소를
+          입력해주세요.
+        </h3>
+        <a href="#" class="btn btn-xl">
+          시작하기 <i class="fas fa-chevron-right btn-icon"></i>
+        </a>
+      </div>
+    </header>
+
+    <section class="tabs">
+      <div class="container">
+        <div id="tab-1" class="tab-item tab-border">
+          <i class="fas fa-door-open fa-3x"></i>
+          <p class="hide-sm">Cancel anytime</p>
+        </div>
+        <div id="tab-2" class="tab-item">
+          <i class="fas fa-tablet-alt fa-3x"></i>
+          <p class="hide-sm">Watch anywhere</p>
+        </div>
+        <div id="tab-3" class="tab-item">
+          <i class="fas fa-tags fa-3x"></i>
+          <p class="hide-sm">Pick your price</p>
+        </div>
+      </div>
+    </section>
+    <section class="tab-content">
+      <div class="container">
+        <!--Tab Content 1 -->
+        <div id="tab-content-1" class="tab-content-item show">
+          <div class="tab-1-content-inner"></div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
